# Flashmaster

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
flashmaster-app/: Cargo.toml
flashmaster-app/src/: main.rs
flashmaster-app/src/api/: dto.rs  mod.rs  routes.rs  server.rs
flashmaster-app/src/cli/: commands.rs  mod.rs  opts.rs
flashmaster-app/src/tui/: app.rs  inputs.rs  mod.rs  theme.rs  views.rs
flashmaster-core/: Cargo.toml
flashmaster-core/src/: errors.rs  filters.rs  lib.rs  models.rs  scheduler.rs  stats.rs
flashmaster-core/src/repo/: memory.rs  mod.rs
flashmaster-json/: Cargo.toml
flashmaster-json/src/: lib.rs  paths.rs
flashmaster-pg/: Cargo.toml
flashmaster-pg/migrations/2025xxxxxx_init/: down.sql  up.sql
flashmaster-pg/src/: lib.rs
flashmaster-sqlite/: Cargo.toml
flashmaster-sqlite/migrations/2025xxxxxx_init/: down.sql  up.sql
flashmaster-sqlite/src/: lib.rs
tests/: scheduler_tests.rs  stats_and_filters_tests.rs
