[package]
name = "flashmaster-app"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "FlashMaster CLI app (JSON/SQLite backends, review loop, import/export, TUI, API)."

[dependencies]
# Core + backends
flashmaster-core   = { path = "../flashmaster-core" }
flashmaster-json   = { path = "../flashmaster-json" }
flashmaster-sqlite = { path = "../flashmaster-sqlite" }

# CLI / runtime
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Utils
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
directories = "5"

# TUI
ratatui = "0.26"
crossterm = "0.27"

# API
axum = "0.7"
tower-http = { version = "0.5", features = ["trace"] }
