[package]
name = "flashmaster-json"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Local JSON persistence with atomic writes and timestamped backups for FlashMaster."

[dependencies]
flashmaster-core = { path = "../flashmaster-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1", features = ["serde", "v4"] }
parking_lot = "0.12"
directories = "5"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
async-trait = "0.1"
