[package]
name = "flashmaster-pg"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "PostgreSQL repository for FlashMaster."

[dependencies]
flashmaster-core = { path = "../flashmaster-core" }
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1", features = ["serde", "v4"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"

# SQLx with Postgres and Rustls TLS (no OpenSSL needed)
sqlx = { version = "0.7", default-features = false, features = ["postgres", "macros", "runtime-tokio", "uuid", "chrono", "tls-rustls"] }
