[package]
name = "flashmaster-sqlite"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "SQLite repository (embedded) for FlashMaster."

[dependencies]
flashmaster-core = { path = "../flashmaster-core" }
anyhow = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1", features = ["serde", "v4"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# SQLx with SQLite
sqlx = { version = "0.7", default-features = false, features = ["sqlite", "macros", "runtime-tokio", "uuid", "chrono"] }
libsqlite3-sys = { version = "0.26.0", features = ["bundled"] }

async-trait = "0.1"
